Hide/show chroma bars with Q key and fix z-index glitches

--- a/src/styles/user.styl
+++ b/src/styles/user.styl
@@ -17,6 +17,13 @@ iframe {
 }
 
 
+body .chromaBars {
+  display: none;
+  z-index: -1;
+}
+body.showRockslidesChromaBars .chromaBars {
+  display: inherit;
+}
 
 .chromaBars {
   position: absolute;
